--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -174,7 +174,7 @@ p#randomPhrase {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 480px; /*100%;*/
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.5); /* Cor de fundo semi-transparente */
