--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -47,15 +47,21 @@ body {
     height: 640px;
 }
 
-#box1{
+#box1, #box2 {
+    width: 100%; 
+    max-width: 300px; 
+    height: auto;
+}
+
+/*#box1{
     max-width: 100%; 
     max-height: 100%; 
-}
+}*/
 
 #boxazul{
     position: absolute; 
-    max-width: 100%; 
-    max-height: 100%; 
+    max-width: 480px; /*100%;*/ 
+    max-height: 854px; /*100%;*/
     margin-top: 20px;
 }
 
