--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -275,12 +275,19 @@ p#randomPhrase {
         font-size: 28px; /*30*/
     }
 
-    /*.botaoTexto {
-        position: relative;
+    .botaoTexto {
+        /*position: relative;
         bottom: auto;
         right: auto;
         margin: 20px auto;
         padding: 10px 30px;
-        font-size: 16px;
-    }*/
+        font-size: 16px;*/
+            position: absolute;
+    width: 300px;
+    text-align: center;
+    top: 33%;
+    left: 90%;
+    transform: translate(-70%, -50%);
+    } 
+
 }
