--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -47,7 +47,7 @@ body {
 .container {
   display: flex;
   width: 350px; /*400*/
-  height: 650px; /*850*/
+  height: 680px; /*650 850*/
   margin-top: 20px;
   background-color: #e1cbcd; /*EEE2D2*/
   border-radius: 20px;
@@ -151,7 +151,7 @@ hr {
 
 #box4 {
   position: relative;
-  top: 290px;
+  top: 320px; /*290px;*/
   margin-left: 30px;
 }
 #b4b,
