--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -164,6 +164,7 @@ hr {
 /*FRASE GERADA*/
 p#randomPhrase {
   position: absolute;
+    width: 200px;
   font-family: "Playfair Display", serif;
   font-size: 30px;
   font-weight: 600;
