--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -168,7 +168,7 @@ p#randomPhrase {
   font-family: "Playfair Display", serif;
   font-size: 30px;
   font-weight: 600;
-  color: #e1cbcd;
+  color: #EEE2D2;
   text-align: left;
   top: 40px;
   left: 30px;
