--- a/icebreaker-css.css
+++ b/icebreaker-css.css
@@ -190,7 +190,7 @@ hr {
 /*FRASE GERADA*/
 p#randomPhrase {
   position: absolute;
-    witdh: 280px;
+    width: 280px;
   font-family: "Playfair Display", serif;
   font-size: 28px;
   font-weight: 600;
